=== Version 0.2.5
* Enhancements
  * #attach_to_window takes an optional block - will return to calling window after block executes
  * Added the following instance methods to PageObject
    * #button_element
    * #text_field_element
    * #hidden_field_element
    * #text_area_element
    * #select_list_element
    * #link_element
  * Updated to use selenium-webdriver 2.4.0
  * Updated to use watir-webdriver 0.3.2

=== Version 0.2.4 / 2011-08-80
* Enhancements
  * Can now find span by :text
  * Can now find button by :value
  * Added #forward and #back methods to PageObject
  * Added #right_click and #double_click methods to Element
  * Added #value= to TextField and TextArea
  * Added #select to SelectList
  * Added #check, #uncheck, and #checked? to CheckBox
  * Added #select, #clear, and #selected? to RadioButton
  * Can properly pass blocks to all accessor methods
  * Updated to use watir-webdriver 0.3.0

=== Version 0.2.3 / 2011-08-01
* Enhancements
  * Can now find a TableCell by its' text
  * If we receive an error calling #attach_to_window, wait one second and try again
  * Will call callback method #initialize_page method if it exists on a page object
  * Renamed all *_<element_type> methods to *_element.  Created alias for backward compatibility
  * Delegating unknown method calls on Element to the driver element object
  * Improved block handling when passed to element creation method
  * Updated to use selenium-webdriver 2.3.2

=== Version 0.2.2 / 2011-07-31
* Enhancements
  * Can find frame by name
  * Added #clear method to Element
  * Removed #switch_to_from from PageObject
  * Added #in_frame to Accessors to handle frame and iframe access
* Fixes
  * Clearing value from text_field before setting value on Selenium

=== Version 0.2.1 / 2011-07-29
* Enhancements
  * Added ability to locate div by the contained text
  * Added #attach_to_window so a page object and operate on another window
  * Added #switch_to_frame to allow one to switch to a frame